[habot] Prefer `Stream.toList()` over `Stream.collect(Collectors.toList())` (#4413)